<resources>
    <string name="app_name">ReuniteFamilies</string>
    <string name="sign_in">Sign In</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="upload">Upload Document</string>


    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_firstname">Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_name">Your Name</string>

    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="already_registered">Already Registered?</string>

    <string name="plus_sign_out">Switch Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="not_registered">Not Registered?</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="sign_up_normal">Sign Up</string>
    <string name="forgotpassword">Forgot Password?</string>

    <string name="anonymous_email">anonymous@jandusapp.com</string>
    <string name="default_password">password</string>
    <string name="anonymous_signin">Anonymous Signin</string>


    <string name="main_screen_title">I am a Volunteer</string>
    <string name="main_screen_title2">willing to help.</string>

    <string name="identity_verification_heading">Please verify your identity as a custodian inorder to gain access to the system.</string>

    <string name="have_account">I have an account.</string>
    <string name="description_register">If you are a volunteer, sign in here.</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_child_age">Child Age</string>
    <string name="prompt_country_of_origin">Country of Origin</string>

    <string name="status_page_title">Reunification Status</string>
    <string name="pending_document_review">Pending Document Review</string>

    <string name="step_one">Step 1: Verify your Identity</string>
    <string name="step_two">Step 2: Enter details of your child</string>
    <string name="case_submitted">Case Submitted: CaseId: 245366 </string>
    <string name="volunteer_selected">Volunteer Selected</string>
    <string name="number_of_sucessful">Number of Completed Cases: 10</string>
    <string name="step_three">Step 3: Contact a Volunteer</string>
    <string name="add_child_image">Add Child Image</string>
    <string name="next">Next</string>
    <string name="id">Passport or \nNational Id</string>
    <string name="birth_cert">Child Birth\n Certificate</string>
    <string name="family_photo">Child or Family\n Photos</string>
    <string name="Not_addded">Not Added</string>

    <!--======================= FONTS ==============================-->

    <string name="SourceSansPro">SourceSansPro</string>
    <string name="SourceSansPro_Black">SourceSansPro-Black.ttf</string>
    <string name="SourceSansPro_BlackItalic">SourceSansPro-BlackItalic.ttf</string>
    <string name="SourceSansPro_Bold">SourceSansPro-Bold.ttf</string>
    <string name="SourceSansPro_BoldItalic">SourceSansPro-BoldItalic.ttf</string>
    <string name="SourceSansPro_ExtraLight">SourceSansPro-ExtraLight.ttf</string>
    <string name="SourceSansPro_ExtraLightItalic">SourceSansPro-ExtraLightItalic.ttf</string>
    <string name="SourceSansPro_Italic">SourceSansPro-Italic.ttf</string>
    <string name="SourceSansPro_Light">SourceSansPro-Light.ttf</string>
    <string name="SourceSansPro_Regular">SourceSansPro-Regular.ttf</string>
    <string name="SourceSansPro_Semibold">SourceSansPro-Semibold.ttf</string>
    <string name="SourceSansPro_SemiboldItalic">SourceSansPro-SemiboldItalic.ttf</string>

    <string name="Montserrat_Regular">Montserrat-Regular</string>
    <string name="Montserrat_SemiBold">Montserrat-SemiBold</string>
    <string name="Montserrat_Black">Montserrat-Black</string>
    <string name="Montserrat_ExtraBold">Montserrat-ExtraBold</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
