<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightgray"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:alpha="0.7"
            android:src="@drawable/immigrant_child"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">



    <com.reunitefamilies.reunitefamilies.fontViews.FontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/heading_text"
        android:textColor="@color/BaseColorWhite"
        android:text="@string/main_screen_title"/>
        <com.reunitefamilies.reunitefamilies.fontViews.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/heading_text"
            android:textColor="@color/BaseColorWhite"
            android:text="@string/main_screen_title2"
            android:layout_marginBottom="@dimen/grid_two"/>
        <com.reunitefamilies.reunitefamilies.fontViews.FontButton
            style="@style/btnStylePrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginBottom="@dimen/grid_one"/>


    </LinearLayout>

    </FrameLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/grid_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/grid_one"
        android:background="@color/BaseColorWhite"
        android:padding="@dimen/grid_two"
        android:orientation="vertical">
        <com.reunitefamilies.reunitefamilies.fontViews.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/heading_text"
            android:text="@string/have_account"
            android:layout_marginBottom="@dimen/grid_two"/>

        <com.reunitefamilies.reunitefamilies.fontViews.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/body_text"
            android:text="@string/description_register"
            android:layout_marginBottom="@dimen/grid_two"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.reunitefamilies.reunitefamilies.fontViews.FontEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                app:font="@string/SourceSansPro_Regular"
                android:maxLines="1"
                android:singleLine="true"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.reunitefamilies.reunitefamilies.fontViews.FontEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                app:font="@string/SourceSansPro_Regular"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/BaseColorBlack"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <com.reunitefamilies.reunitefamilies.fontViews.FontButton
            style="@style/btnStylePrimary"
            android:layout_marginTop="@dimen/grid_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_marginBottom="@dimen/grid_one"/>

    </LinearLayout>



</LinearLayout>