<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">
                <com.reunitefamilies.reunitefamilies.views.AspectRatioImageView
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:paddingBottom="@dimen/grid_one"
                    android:src="@drawable/rmf_logo"/>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:elevation="@dimen/grid_two"
                   android:layout_height="wrap_content"
                   android:padding="@dimen/grid_one"
                   android:layout_marginLeft="@dimen/grid_one"
                   android:layout_marginRight="@dimen/grid_one"
                   android:background="@color/BaseColorWhite"
                   android:orientation="vertical">

                   <android.support.design.widget.TextInputLayout
                       android:id="@+id/inputlayout_firstname"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">
                   <EditText
                       android:id="@+id/first_name_editText"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/prompt_firstname"
                       android:imeActionLabel="@string/prompt_firstname"
                       android:imeOptions="actionUnspecified"
                       android:inputType="text"
                       android:maxLines="1"
                       fontPath="fonts/Roboto-Regular.ttf"
                       tools:ignore="MissingPrefix"
                       android:textColor="@color/half_black"
                       android:singleLine="true" />
                   </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/last_displayname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/last_name_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_lastname"
                        android:imeActionLabel="@string/prompt_lastname"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        fontPath="fonts/Roboto-Regular.ttf"
                        tools:ignore="MissingPrefix"
                        android:textColor="@color/half_black"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputlayout_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/email_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:imeActionLabel="@string/prompt_email"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        fontPath="fonts/Roboto-Regular.ttf"
                        tools:ignore="MissingPrefix"
                        android:textColor="@color/half_black"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/signin_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/edittext_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionLabel="@string/sign_up"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            fontPath="fonts/Roboto-Regular.ttf"
                            tools:ignore="MissingPrefix"
                            android:textColor="@color/half_black"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>


                    <ImageView
                        android:id="@+id/signup_show_hide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:src="@drawable/eyeball"
                        android:layout_marginRight="@dimen/grid_one"
                        android:alpha="0.6"
                        />
                </FrameLayout>
                <Button
                    android:layout_gravity="center"
                    android:id="@+id/sign_up_button"
                    style="@style/btnStylePrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    fontPath="fonts/Roboto-Regular.ttf"
                    tools:ignore="MissingPrefix"
                    android:text="@string/sign_up_normal"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    fontPath="fonts/Roboto-Regular.ttf"
                    tools:ignore="MissingPrefix"
                    android:text="hh"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/grid_one"
                    android:id="@+id/tos" />
                <LinearLayout
                    android:id="@+id/signin_Layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        fontPath="fonts/Roboto-Regular.ttf"
                        android:text="@string/already_registered"
                        tools:ignore="MissingPrefix"
                        android:id="@+id/textView_already" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:font="@string/SourceSansPro_Bold"
                        android:textColor="@color/half_black"
                        tools:ignore="MissingPrefix"
                        android:background="@android:color/transparent"
                        android:text="@string/action_sign_in"
                        android:id="@+id/sign_up_signin_button" />

                </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            <ProgressBar
                android:id="@+id/signup_loading_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/colorAccent"
                android:layout_gravity="top|center" />

        </FrameLayout>
    </ScrollView>

</LinearLayout>
