<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/grid_one"
    android:orientation="vertical"
    tools:context=".StatusPageActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status_page_title"
        android:textSize="@dimen/medium_text"
        fontPath="fonts/Monserrat-Black.ttf"
        tools:ignore="MissingPrefix" />
    <View
        android:layout_margin="@dimen/grid_one"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lightgray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
            android:src="@drawable/child_sep"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/submitted"
                android:paddingTop="@dimen/grid_one"
                android:paddingLeft="@dimen/grid_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/case_submitted"
                android:textSize="@dimen/body_text"
                android:textColor="@color/BaseColorBlack"
                fontPath="fonts/Monserrat-Black.ttf"
                tools:ignore="MissingPrefix" />
        <TextView
            android:id="@+id/status"
            android:paddingTop="@dimen/grid_one"
            android:paddingLeft="@dimen/grid_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pending_document_review"
            android:textSize="@dimen/medium_text"
            android:textColor="@color/BaseColorBlack"
            fontPath="fonts/Monserrat-Black.ttf"
            tools:ignore="MissingPrefix" />

        </LinearLayout>



    </LinearLayout>
    <View
        android:layout_margin="@dimen/grid_one"
        android:layout_width="match_parent"
        android:background="@color/lightgray"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/volunteer"
        android:paddingTop="@dimen/grid_one"
        android:paddingLeft="@dimen/grid_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volunteer_selected"
        android:textSize="@dimen/body_text"
        android:textColor="@color/BaseColorBlack"
        fontPath="fonts/Monserrat-Black.ttf"
        tools:ignore="MissingPrefix" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_margin="@dimen/grid_half"
            android:id="@+id/volunteer1"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="4dp"
            card_view:cardMaxElevation="6dp"
            android:layout_width="100dp"
            android:layout_height="100dp">

            <ImageView
                android:id="@+id/selected_volunteer"
                android:layout_width="wrap_content"
                android:src="@drawable/volunteer1"
                android:scaleType="centerCrop"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/Successful_case"
                android:paddingTop="@dimen/grid_one"
                android:paddingLeft="@dimen/grid_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_sucessful"
                android:textSize="@dimen/body_text"
                android:textColor="@color/BaseColorBlack"
                fontPath="fonts/Monserrat-Black.ttf"
                tools:ignore="MissingPrefix" />
            <Button
                android:layout_gravity="center"
                android:id="@+id/verify_next_button"
                style="@style/btnStylePrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                fontPath="fonts/Roboto-Regular.ttf"
                tools:ignore="MissingPrefix"
                android:text="SenD Message"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>