<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"

        android:layout_height="wrap_content">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">
                <TextView
                    android:id="@+id/heading"
                    android:paddingLeft="@dimen/grid_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_two"
                    android:textSize="@dimen/medium_text"
                    fontPath="fonts/Monserrat-Black.ttf"
                    tools:ignore="MissingPrefix" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/grid_one"
                    android:background="@color/lightgray"/>

               <LinearLayout
                   android:layout_width="match_parent"
                   android:elevation="@dimen/grid_two"
                   android:layout_height="wrap_content"
                   android:padding="@dimen/grid_one"
                   android:layout_marginLeft="@dimen/grid_one"
                   android:layout_marginRight="@dimen/grid_one"
                   android:background="@color/BaseColorWhite"
                   android:orientation="vertical">

                   <android.support.design.widget.TextInputLayout
                       android:id="@+id/inputlayout_firstname"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content">
                   <EditText
                       android:id="@+id/child_first_name"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:hint="@string/prompt_firstname"
                       android:text="Maria"
                       android:imeActionLabel="@string/prompt_firstname"
                       android:imeOptions="actionUnspecified"
                       android:inputType="text"
                       android:maxLines="1"
                       fontPath="fonts/Roboto-Regular.ttf"
                       tools:ignore="MissingPrefix"
                       android:textColor="@color/half_black"
                       android:singleLine="true" />
                   </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/last_displayname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/child_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_lastname"
                        android:text="Lopez"
                        android:imeActionLabel="@string/prompt_lastname"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        fontPath="fonts/Roboto-Regular.ttf"
                        tools:ignore="MissingPrefix"
                        android:textColor="@color/half_black"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputlayout_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/child_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_child_age"
                        android:imeActionLabel="@string/prompt_email"
                        android:text="4"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        fontPath="fonts/Roboto-Regular.ttf"
                        tools:ignore="MissingPrefix"
                        android:textColor="@color/half_black"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/signin_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/child_country_of_origin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="GuateMala"
                            android:hint="@string/prompt_country_of_origin"
                            android:imeActionLabel="@string/sign_up"
                            android:imeOptions="actionUnspecified"
                            android:inputType="text"
                            fontPath="fonts/Roboto-Regular.ttf"
                            tools:ignore="MissingPrefix"
                            android:textColor="@color/half_black"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>


                    <ImageView
                        android:id="@+id/signup_show_hide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_gravity="end|center_vertical"
                        android:src="@drawable/eyeball"
                        android:layout_marginRight="@dimen/grid_one"
                        android:alpha="0.6"
                        />
                </FrameLayout>

                   <ImageView
                       android:id="@+id/chidImage"
                       android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:src="@drawable/child_placeholder"/>
                   <TextView
                       android:id="@+id/add_child_image"
                       android:paddingLeft="@dimen/grid_one"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/add_child_image"
                       android:textSize="@dimen/body_text"
                       fontPath="fonts/Monserrat-Black.ttf"
                       tools:ignore="MissingPrefix" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    fontPath="fonts/Roboto-Regular.ttf"
                    tools:ignore="MissingPrefix"
                    android:text="hh"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/grid_one"
                    android:id="@+id/tos" />
                <LinearLayout
                    android:id="@+id/signin_Layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                </LinearLayout>

                </LinearLayout>

            </LinearLayout>
            <ProgressBar
                android:id="@+id/signup_loading_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/colorAccent"
                android:layout_gravity="top|center" />

        </FrameLayout>
    </ScrollView>

</LinearLayout>
